# bitbots_vision

./: README.md  camera_thmos.yaml
bitbots_vision/cfg/: Vision.cfg  Vision_fjw.cfg  vision.cfg
bitbots_vision/config/: visionparams.yaml
bitbots_vision/launch/: usb_camera.launch  vision_startup.launch
bitbots_vision/src/bitbots_vision/: dynamic_color_space.py  serverVision.py  vision.py
bitbots_vision/src/bitbots_vision/vision_modules/: ball.py  ball_candidate_body_mask_filter.py  candidate.py  classifier.py  color.py  debug.py  dummy_ballfinder.py  evaluator.py  fcnn_handler.py  goalpost.py  horizon.py  lines.py  live_classifier.py  live_fcnn_03.py  obstacle.py  yolo_handler.py
bitbots_vision_tools/: CMakeLists.txt  package.xml  setup.py
bitbots_vision_tools/cfg/: color_space_finder_config.cfg
bitbots_vision_tools/config/: color_space_finder_config.yaml
bitbots_vision_tools/launch/: bitbots_vision_color_space_finder.launch
bitbots_vision_tools/src/: color_space_finder.py  color_test.py
