<?xml version="1.0"?>
<package format="2">
  <name>bitbots_vision_tools</name>
  <version>0.0.0</version>
  <description>The vision_tools package</description>

  <maintainer email="git@nfiedler.de">Niklas Fiedler</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>

  <author email="git@nfiedler.de">Niklas Fiedler</author>

   <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>python-rospkg</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>image_transport</depend>
    <depend>message_runtime</depend>
    <depend>nav_msgs</depend>
    <depend>humanoid_league_msgs</depend>
    <depend>bitbots_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>python-numpy</depend>
    <depend>python-opencv</depend>
    <depend>wolves_image_provider</depend>
    <depend>bitbots_vision</depend>

  <export>
    <bitbots_documentation>
      <status>tested_viz</status>
      <language>python</language>
    </bitbots_documentation>
  </export>
</package>
